# bot

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  ai.zsh  compose.yml
at/feed-generator/: env  readme.md
at/feed-generator/src/: subscription.ts
at/feed-generator/src/algos/: cmd.ts  index.ts
at/lexicons/ai/syui/: card.json  game.json
at/lexicons/ai/syui/card/: verify.json
at/lexicons/ai/syui/game/: user.json
at/lexicons/ai/syui/o/: comment.json  post.json  vote.json
docs/: atproto.md  wiki.md
k8s/: aios-deployment.yaml  env-configmap.yaml
scpt/: env  token.zsh
src/: ascii.rs  bot.rs  data.rs  delete_record.rs  describe.rs  feed_get.rs  feed_watch.rs  follow.rs  followers.rs  follows.rs  game.rs  img_reply.rs  img_upload.rs  like.rs  main.rs  mention.rs  notify.rs  notify_read.rs  openai.rs  post.rs  post_link.rs  profile.rs  refresh.rs  reply.rs  reply_link.rs  reply_og.rs  repost.rs  session.rs  timeline_author.rs  token.rs
src/game/: post_card.rs  post_card_verify.rs  post_game.rs  post_game_login.rs  post_game_user.rs
test/: ai.zsh  cron.zsh  entrypoint.sh  env.zsh  feed.zsh  notify.zsh  notify_cid.zsh  refresh.zsh  reply.zsh  token.zsh
